sidebar scroll bar, better log line selecting, fixed titlebar events issue
- sidebar now scrolls when too long
- titlebar no longer disappears when opening an event in netlog
- triple click selecting log line in details pane no longer copies extra text

--- a/src/renderer/styles/sidebar.less
+++ b/src/renderer/styles/sidebar.less
@@ -3,7 +3,7 @@
 
 .Sidebar {
   background: @light-gray1;
-  overflow-y: auto;
+  overflow-y: scroll;
   flex-shrink: 0;
   width: 0;
 
